--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,7 +1,10 @@
 doctype html
-html
+html(lang="ru")
   head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=900")
+    title Screenshotgun
+
+    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic" rel="stylesheet")
+    block head
+  block body
