--- a/views/show.pug
+++ b/views/show.pug
@@ -1,7 +1,12 @@
-extends layout
-block head
-  link(rel='stylesheet', href='/stylesheets/index.css')
-block body
+doctype html
+html(lang="ru")
+  head
+    meta(charset="utf-8")
+    meta(name="viewport" content="width=900")
+    title Screenshotgun
+
+    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic" rel="stylesheet")
+    link(rel='stylesheet', href='/stylesheets/style.css')
   body.page.page-index
     .background-wrapper
       .background
