--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,9 +2,9 @@ doctype html
 html(lang="ru")
   head
     meta(charset="utf-8")
-    meta(name="viewport" content="width=900")
+    meta(name="viewport", content="width=900")
     title Screenshotgun
 
-    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic" rel="stylesheet")
+    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic", rel="stylesheet")
     block head
   block body
