--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,6 @@
 extends layout
 block head
-  link(rel='stylesheet', href='/stylesheets/index.css')
+  link(rel="stylesheet", href="/stylesheets/index.css")
 block body
   body.page.page-index
     .background-wrapper
