--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,6 @@ html(lang="ru")
     meta(name="viewport", content="width=900")
     title Screenshotgun
 
-    link(href="http://fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic", rel="stylesheet")
+    link(href="//fonts.googleapis.com/css?family=Roboto:400,300&subset=latin,cyrillic", rel="stylesheet")
     block head
   block body
